# bypass

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml
.claude/skills/code-review/: SKILL.md
.claude/skills/commit-and-push/: SKILL.md
.claude/skills/docs-engineering/: SKILL.md
.claude/skills/release-engineering/: SKILL.md
.claude/skills/security-audit/: SKILL.md
.github/workflows/: ci.yml  release.yml
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/io/bypass/android/: BypassApplication.kt  MainActivity.kt
android/app/src/main/kotlin/io/bypass/android/crypto/: CryptoUiBridge.kt  OpenKeychainCrypto.kt  StubCrypto.kt
android/app/src/main/kotlin/io/bypass/android/repository/: BypassRepository.kt
android/app/src/main/kotlin/io/bypass/android/ui/: BypassNavHost.kt
android/app/src/main/kotlin/io/bypass/android/ui/screens/: GenerateScreen.kt  InitScreen.kt  InsertScreen.kt  ListScreen.kt  ShowScreen.kt
android/app/src/main/kotlin/io/bypass/android/ui/theme/: Theme.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
crates/bypass-cli/: Cargo.toml
crates/bypass-cli/src/: audit.rs  backup.rs  cli.rs  clipboard.rs  crypto_gpg.rs  doctor.rs  edit.rs  extensions.rs  import.rs  main.rs  messaging_host.rs  native_host_install.rs  restore.rs  storage_fs.rs  tree.rs  vcs_git2.rs
crates/bypass-cli/src/sync/: daemon.rs  identity.rs  libp2p_transport.rs  merge_driver.rs  mod.rs  pairing.rs  peers.rs  ratelimit.rs  service.rs  socket.rs  syncing.rs  transport.rs  watcher.rs  wire.rs
crates/bypass-cli/tests/: end_to_end.rs  sync_daemon.rs  sync_loopback.rs
crates/bypass-cli/tests/common/: mod.rs
crates/bypass-cli/tests/fixtures/: bypass-import-stub
crates/bypass-core/: Cargo.toml
crates/bypass-core/src/: bundle.rs  crypto.rs  entry.rs  error.rs  generate.rs  gpg_id.rs  import.rs  lib.rs  otp.rs  path.rs  storage.rs  store.rs  vcs.rs
crates/bypass-core/src/import/: bitwarden.rs  csv.rs  keepass.rs
crates/bypass-ffi/: Cargo.toml
crates/bypass-ffi/src/: crypto.rs  error.rs  lib.rs  storage.rs
doc/: ROADMAP.md  sync-p2p-evaluation.md
doc/adr/: 0000-record-architecture-decisions.md  0001-platform-delegated-crypto.md  0002-pass-compatible-on-disk-layout.md  0003-workspace-split-core-cli.md  0004-git2-crate-not-subprocess.md  0005-gpl-license-with-spdx-headers.md  0006-trait-associated-error-types.md  0007-relpath-traversal-safety.md  0008-secure-delete-via-overwrite.md  0009-leak-check-before-push.md  0010-p2p-transport-libp2p.md  0011-sync-semantics-hybrid.md  0012-pake-spake2.md  0013-sync-transport-trait.md  0014-sync-metadata-and-ordering.md  0015-device-identity-key.md  0016-sync-dos-defences.md  0017-daemon-socket-location.md  0018-daemon-status-protocol.md  0019-peer-revocation-trust-semantics.md  0020-daemon-service-supervision.md  0021-release-packaging.md  0022-native-messaging-wire-protocol.md  0023-browser-extension-architecture.md  0024-android-ffi-via-uniffi.md  0025-android-ui-architecture.md  0026-export-import-for-backup-and-rotation.md  0027-foreign-format-importers.md  0028-drop-macos-support.md  0029-importer-extension-wire-format.md  README.md
doc/extensions/: importer-protocol.md
extension/: README.md  build.mjs  manifest.json  package-lock.json  package.json  tsconfig.json
extension/src/: native.ts  popup.html  popup.ts  types.ts
