[package]
name = "bypass"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A pass-compatible CLI password manager."

[[bin]]
name = "bypass"
path = "src/main.rs"

[dependencies]
bypass-core = { path = "../bypass-core" }
anyhow = "1"
arboard = "3"
clap = { version = "4", features = ["derive"] }
dirs = "6"
git2 = "0.20"
libp2p-identity = { version = "0.2", features = ["ed25519", "peerid", "rand"] }
rand = "0.9"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
spake2 = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
toml = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.clippy]
all = { level = "warn", priority = -1 }
