[package]
name = "bypass"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A pass-compatible CLI password manager."

[[bin]]
name = "bypass"
path = "src/main.rs"

[dependencies]
bypass-core = { path = "../bypass-core", version = "0.1.0" }
anyhow = "1"
arboard = "3"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
dirs = "6"
# `vendored-openssl` builds OpenSSL from source as part of `cargo
# build` instead of linking the system `libssl`. Needed for the
# release workflow's `cross`-based aarch64-linux build (the cross
# container has no `libssl-dev:arm64`); harmless on every other
# target where `cross` isn't in play. Adds ~5 MB to the stripped
# binary.
git2 = { version = "0.20", features = ["vendored-openssl"] }
libp2p = { version = "0.56", features = [
    "macros",
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "request-response",
    "cbor",
    "mdns",
    "identify",
] }
libp2p-identity = { version = "0.2", features = ["ed25519", "peerid", "rand"] }
notify = "8"
rand = "0.9"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
spake2 = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "signal", "io-util", "net"] }
toml = "1"
zeroize = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tar = "0.4"
tempfile = "3"

[lints.clippy]
all = { level = "warn", priority = -1 }
