[package]
name = "bypass-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform-agnostic core for the `bypass` password manager. No filesystem, no subprocesses, no clipboard — only business logic over the Crypto, Storage, and VersionControl traits."

[dependencies]
rand = "0.9"
totp-rs = "5"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
