[package]
name = "bypass-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform-agnostic core for the `bypass` password manager. No filesystem, no subprocesses, no clipboard — only business logic over the Crypto, Storage, and VersionControl traits."

[dependencies]
rand = "0.9"
totp-rs = { version = "5", features = ["otpauth"] }
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }

# Bundle format (ADR-0026 / Milestone 4.4). Pure-Rust, no I/O —
# `bypass-core` stays platform-agnostic per ADR-0003.
tar = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Foreign-format importers (ADR-0027 / Milestone 4.5).
# Pure-Rust, no I/O — `bypass-core` stays platform-agnostic per ADR-0003.
serde_json = "1"
csv = "1"
# KeePass KDBX-XML exports — DOM-style traversal of a one-shot
# export is simpler than streaming with `quick-xml`. Pure-Rust,
# no_std-friendly, small dep surface.
roxmltree = "0.20"

[lints.clippy]
all = { level = "warn", priority = -1 }
